qa/apps/portal-ui-release-cqdg-135/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-135
  name: portal-ui-release-cqdg-135
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-135
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-135
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:feature-cqdg-135-1d25cc2-1697645175 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-135"}
        name: portal-ui-release-cqdg-135
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
